# synchronous-socket-service

./: CMakeLists.txt  README.md  main-client.cpp  main-server.cpp
service/: client.cpp  client.hpp  server.cpp  server.hpp  service-exception.hpp  service_exception.hpp  utils.hpp
